# SNCP

./: .gitignore  AGENTS.md  README.md
.github/workflows/: release.yml
SNCP-app/: .env.example  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
SNCP-app/app/: +html.tsx  _layout.tsx  _layout.web.tsx  ai-recognize.tsx  login.tsx  meal-history.tsx  register.tsx  reminders.tsx
SNCP-app/components/: ambient-background.tsx  app-update-modal.tsx  bottom-dock.tsx  (+3 more)
ai_end/: README.md  __init__.py
backend/: .env.example  Dockerfile  README.md  __init__.py  app.py  config.py  db.py  docker-compose.yml  pyproject.toml
backend/data/: __init__.py  default_recipes.py
backend/models/: auth.py
backend/repository/: __init__.py  admin_dashboard_repository.py  app_update_repository.py  health_rule_repository.py  meal_repository.py  profile_repository.py  recipe_repository.py  reminder_repository.py  user_repository.py
backend/routes/: __init__.py  admin.py  ai.py  auth.py  dashboard.py  meals.py  profile.py  recipes.py  reminders.py  update.py
backend/scripts/: create_admin_user.py  export_offline_images.sh
backend/services/: __init__.py  ai_service.py  app_update_service.py  auth_service.py  cache_service.py  exceptions.py  external_recipe_service.py  nutrition_service.py  recipe_cover_service.py
backend/utils/: request_context.py  timezone_context.py
docs/: README.md  ai-visual-recognition-skill.md  api_documentation.md  food_catalog_sources.md  程序UI.docx  程序UI.paras.txt  程序UI.txt  食伴程序设计.docx  食伴程序设计.paras.txt  食伴程序设计.txt
(+75 files in other folders)
